# lua51

./: .gitattributes  .gitignore  CMakeLists.txt  meson.build  meson_options.txt
one/: one.c  one_lib.c  one_lua.c  one_luac.c  script.sh
src/: ldebug.c  ldebug.h  lvm.c  print.c
test/: load.lua
